versions/v1.0.3/modules/fr/pages/references/crds.adoc
[id="k3k-api-reference"]
= Référence API
:revdate: "2026-01-28"
:page-revdate: {revdate}
:anchor_prefix: k8s-api

== Paquetages
- xref:{anchor_prefix}-k3k-io-v1beta1[$$k3k.io/v1beta1$$]


[id="{anchor_prefix}-k3k-io-v1beta1"]
== k3k.io/v1beta1


=== Types de ressource
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon"]
=== Addon



L'addon spécifie un Secret contenant du YAML à déployer au démarrage du cluster.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`secretNamespace`* __chaîne__ | SecretNamespace est l'espace de noms du Secret. + |  | 
| *`secretRef`* __chaîne__ | SecretRef est le nom du Secret. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster"]
=== Grappe



Cluster définit un cluster Kubernetes virtuel géré par k3k.
Il spécifie l'état souhaité d'un cluster virtuel, y compris la version, la configuration des nœuds et le réseau. k3k l'utilise pour provisionner et gérer ces clusters virtuels.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`apiVersion`* __chaîne__ | `k3k.io/v1beta1` | |
| *`kind`* __chaîne__ | `Cluster` | |
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__ | Consultez la documentation de l'API Kubernetes pour les champs de `metadata`.
 |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]__ | La spécification définit l'état souhaité du Cluster. + | {  } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist"]
=== ClusterList



ClusterList est une liste de ressources Cluster.





[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`apiVersion`* __chaîne__ | `k3k.io/v1beta1` | |
| *`kind`* __chaîne__ | `ClusterList` | |
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__ | Consultez la documentation de l'API Kubernetes pour les champs de `metadata`.
 |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$] tableau__ |  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode"]
=== ClusterMode

_Type sous-jacent :_ _chaîne_

ClusterMode est le mode de provisionnement possible d'un Cluster.

_Validation :_
- Enum{nbsp}: [partagé virtuel]

_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterphase"]
=== ClusterPhase

_Type sous-jacent :_ _chaîne_

ClusterPhase est un résumé de haut niveau de l'état actuel du cycle de vie du Cluster.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec"]
=== ClusterSpec



ClusterSpec définit l'état souhaité d'un cluster Kubernetes virtuel.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`version`* __chaîne__ | La version est la version K3s à utiliser pour les nœuds virtuels. +
Elle doit suivre la convention de versionnement K3s (par exemple, v1.28.2-k3s1). +
Si non spécifié, la version Kubernetes du nœud hôte sera utilisée. + |  | 
| *`mode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__ | Le mode spécifie le mode de provisionnement du cluster{nbsp}: "partagé" ou "virtuel". +
Par défaut, "partagé". Ce champ est immuable. + | shared | Enum{nbsp}: [partagé virtuel] +

| *`servers`* __entier__ | Les serveurs spécifient le nombre de pods K3s à exécuter en mode serveur (plan de contrôle). +
Doit être d'au moins 1. La valeur par défaut est 1. + | 1 | 
| *`agents`* __entier__ | Les agents spécifient le nombre de pods K3s à exécuter en mode agent (travailleur). +
Doit être 0 ou plus. La valeur par défaut est 0. +
Ce champ est ignoré en mode "partagé". + | 0 | 
| *`clusterCIDR`* __chaîne__ | ClusterCIDR est la plage CIDR pour les adresses IP des pods. +
La valeur par défaut est 10.42.0.0/16 en mode partagé et 10.52.0.0/16 en mode virtuel. +
Ce champ est immuable. + |  | 
| *`serviceCIDR`* __chaîne__ | ServiceCIDR est la plage CIDR pour les adresses IP des services. +
La valeur par défaut est 10.43.0.0/16 en mode partagé et 10.53.0.0/16 en mode virtuel. +
Ce champ est immuable. + |  | 
| *`clusterDNS`* __chaîne__ | ClusterDNS est l'adresse IP du service CoreDNS. +
Doit être dans la plage ServiceCIDR. La valeur par défaut est 10.43.0.10. +
Ce champ est immuable. + |  | 
| *`persistence`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]__ | La persistance spécifie les options pour la persistance des données etcd. +
La valeur par défaut est la persistance dynamique, qui utilise un PersistentVolumeClaim pour fournir la persistance des données. +
Une StorageClass par défaut est requise pour la persistance dynamique. + |  | 
| *`expose`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]__ | Expose spécifie les options pour exposer le serveur API. +
Par défaut, il n'est exposé qu'en tant que ClusterIP. + |  | 
| *`nodeSelector`* __objet (clés:string, valeurs:string)__ | NodeSelector spécifie les étiquettes de nœud pour contraindre où les pods serveur/agent sont planifiés. +
En mode "partagé", cela s'applique également aux charges de travail. + |  | 
| *`priorityClass`* __chaîne__ | PriorityClass spécifie le priorityClassName pour les pods serveur/agent. +
En mode "partagé", cela s'applique également aux charges de travail. + |  | 
| *`tokenSecretRef`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#secretreference-v1-core[$$SecretReference$$]__ | TokenSecretRef est une référence Secret contenant le token utilisé par les nœuds de travail pour rejoindre le cluster. +
Le Secret doit avoir un champ "token" dans ses données. + |  | 
| *`tlsSANs`* __tableau de chaînes__ | TLSSANs spécifie les noms alternatifs de sujet pour le certificat du serveur K3s. + |  | 
| *`serverArgs`* __tableau de chaînes__ | ServerArgs spécifie des paires clé-valeur ordonnées pour les pods serveur K3s. +
Exemple{nbsp}: ["--tls-san=example.com"] + |  | 
| *`agentArgs`* __tableau de chaînes__ | AgentArgs spécifie des paires clé-valeur ordonnées pour les pods agent K3s. +
Exemple{nbsp}: ["--node-name=my-agent-node"] + |  | 
| *`serverEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] tableau__ | ServerEnvs spécifie la liste des variables d'environnement à définir dans le pod serveur. + |  | 
| *`agentEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] tableau__ | AgentEnvs spécifie la liste des variables d'environnement à définir dans le pod agent. + |  | 
| *`addons`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon[$$Addon$$] tableau__ | Addons spécifie des secrets contenant du YAML brut à déployer au démarrage du cluster. + |  | 
| *`serverLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__ | ServerLimit spécifie les limites de ressources pour les nœuds serveur. + |  | 
| *`workerLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__ | WorkerLimit spécifie les limites de ressources pour les nœuds agents. + |  | 
| *`mirrorHostNodes`* __booléen__ | MirrorHostNodes contrôle si les objets de nœud du cluster hôte +
sont reflétés dans le cluster virtuel. + |  | 
| *`customCAs`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]__ | CustomCAs spécifie les paires de certificats/clés pour les certificats CA personnalisés. + |  | 
| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__ | Sync spécifie les types de ressources qui seront synchronisés du cluster virtuel vers le cluster hôte. + | {  } | 
| *`secretMounts`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount[$$SecretMount$$] tableau__ | SecretMounts spécifie une liste de secrets à monter dans les pods du serveur et de l'agent. +
Chaque entrée définit un secret et son chemin de montage dans les pods. + |  | 
|===




[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig"]
=== ConfigMapSyncConfig



ConfigMapSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | true | 
| *`selector`* __objet (clés:string, valeurs:string)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource"]
=== CredentialSource



CredentialSource définit d'où obtenir des informations d'identification.
Il peut représenter soit une paire de clés TLS, soit une seule clé privée.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`secretName`* __chaîne__ | Le secret doit contenir des clés spécifiques en fonction du type d'identifiant{nbsp}: +
- Pour les paires de certificats TLS (par exemple, ServerCA){nbsp}: `tls.crt` et `tls.key`. +
- Pour la clé de signature ServiceAccountToken{nbsp}: `tls.key`. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources"]
=== CredentialSources



CredentialSources répertorie toutes les informations d'identification requises, y compris les paires de clés TLS et les clés de signature uniques.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`serverCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ServerCA spécifie la paire de certificats/clés server-ca. + |  | 
| *`clientCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ClientCA spécifie la paire de certificats/clés client-ca. + |  | 
| *`requestHeaderCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | RequestHeaderCA spécifie la paire de certificats/clés request-header-ca. + |  | 
| *`etcdServerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ETCDServerCA spécifie la paire de certificats/clés etcd-server-ca. + |  | 
| *`etcdPeerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ETCDPeerCA spécifie la paire de certificats/clés etcd-peer-ca. + |  | 
| *`serviceAccountToken`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__ | ServiceAccountToken spécifie la clé du service-account-token. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas"]
=== CustomCAs



CustomCAs spécifie les paires de certificats/clés pour les certificats CA personnalisés.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled active ou désactive cette fonctionnalité. + | true | 
| *`sources`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]__ | Sources définit les sources pour tous les certificats CA personnalisés requis. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig"]
=== ExposeConfig



ExposeConfig spécifie les options pour exposer le serveur API.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`ingress`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig[$$IngressConfig$$]__ | Ingress spécifie les options pour exposer le serveur API via un Ingress. + |  | 
| *`loadBalancer`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig[$$LoadBalancerConfig$$]__ | LoadBalancer spécifie les options pour exposer le serveur API via un service LoadBalancer. + |  | 
| *`nodePort`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig[$$NodePortConfig$$]__ | NodePort spécifie les options pour exposer le serveur API via NodePort. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig"]
=== IngressConfig



IngressConfig spécifie les options pour exposer le serveur API via un Ingress.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`annotations`* __objet (clés:chaîne, valeurs:chaîne)__ | Annotations spécifie les annotations à ajouter à l'Ingress. + |  | 
| *`ingressClassName`* __chaîne__ | IngressClassName spécifie la classe d'Ingress à utiliser pour l'Ingress. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig"]
=== IngressSyncConfig



IngressSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | false | 
| *`selector`* __objet (clés:chaîne, valeurs:chaîne)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig"]
=== LoadBalancerConfig



LoadBalancerConfig spécifie les options pour exposer le serveur API via un service LoadBalancer.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`serverPort`* __entier__ | ServerPort est le port sur lequel le serveur K3s est exposé lorsque le type est LoadBalancer. +
Si non spécifié, le port https par défaut 443 sera alloué. +
Si 0 ou négatif, le port ne sera pas exposé. + |  | 
| *`etcdPort`* __entier__ | ETCDPort est le port sur lequel le service ETCD est exposé lorsque le type est LoadBalancer. +
Si non spécifié, le port etcd par défaut 2379 sera alloué. +
Si 0 ou négatif, le port ne sera pas exposé. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig"]
=== NodePortConfig



NodePortConfig spécifie les options pour exposer le serveur API via NodePort.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`serverPort`* __entier__ | ServerPort est le port sur chaque nœud sur lequel le serveur K3s est exposé lorsque le type est NodePort. +
Si non spécifié, un port aléatoire entre 30000-32767 sera alloué. +
Si hors de la plage, le port ne sera pas exposé. + |  | 
| *`etcdPort`* __entier__ | ETCDPort est le port sur chaque nœud sur lequel le service ETCD est exposé lorsque le type est NodePort. +
Si non spécifié, un port aléatoire entre 30000-32767 sera alloué. +
Si hors de la plage, le port ne sera pas exposé. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig"]
=== PersistenceConfig



PersistenceConfig spécifie les options pour persister les données etcd.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`type`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode[$$PersistenceMode$$]__ | Le type spécifie le mode de persistance. + | dynamique | 
| *`storageClassName`* __chaîne__ | StorageClassName est le nom de la classe de stockage à utiliser pour le PVC. +
Ce champ n'est pertinent qu'en mode "dynamique". + |  | 
| *`storageRequestSize`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#quantity-resource-api[$$Quantité$$]__ | StorageRequestSize est la taille demandée pour le PVC. +
Ce champ n'est pertinent qu'en mode "dynamique". + | 2G | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode"]
=== PersistenceMode

_Type sous-jacent :_ _chaîne_

PersistenceMode est le mode de stockage d'un cluster.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig"]
=== PersistentVolumeClaimSyncConfig



PersistentVolumeClaimSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | true | 
| *`selector`* __objet (clés:string, valeurs:string)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel"]
=== PodSecurityAdmissionLevel

_Type sous-jacent :_ _chaîne_

PodSecurityAdmissionLevel est le niveau de politique appliqué aux pods dans l'espace de noms.

_Validation:_
- Enum: [privileged, baseline, restricted]

_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig"]
=== PriorityClassSyncConfig



PriorityClassSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | false | 
| *`selector`* __objet (clés:chaîne, valeurs:chaîne)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount"]
=== SecretMount



SecretMount définit un secret à monter dans les pods du serveur ou de l'agent, permettant des configurations personnalisées, des certificats ou d'autres données sensibles.



_Apparaît Dans:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`secretName`* __chaîne__ | secretName est le nom du secret dans l'espace de noms du pod à utiliser. +
Pour en savoir plus{nbsp}: https://kubernetes.io/docs/concepts/storage/volumes#secret + |  | 
| *`items`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#keytopath-v1-core[$$KeyToPath$$] tableau__ | éléments Si non spécifié, chaque paire clé-valeur dans le champ Données du +
Secret sera projeté dans le volume sous forme de fichier dont le nom est le +
la clé et le contenu sont la valeur. Si spécifié, les clés listées seront +
projetées dans les chemins spécifiés, et les clés non listées ne le seront pas +
présent. Si une clé est spécifiée qui n'est pas présente dans le Secret, +
la configuration du volume générera une erreur à moins qu'elle ne soit marquée comme optionnelle. Les chemins doivent être +
relatifs et ne peuvent pas contenir le chemin '..' ou commencer par '..'. + |  | 
| *`defaultMode`* __entier__ | defaultMode est optionnel{nbsp}: bits de mode utilisés pour définir les permissions sur les fichiers créés par défaut. +
Doit être une valeur octale entre 0000 et 0777 ou une valeur décimale entre 0 et 511. +
YAML accepte à la fois des valeurs octales et décimales, JSON nécessite des valeurs décimales +
pour les bits de mode. La valeur par défaut est 0644. +
Les répertoires dans le chemin ne sont pas affectés par ce paramètre. +
Cela pourrait entrer en conflit avec d'autres options qui affectent le fichier +
mode, comme fsGroup, et le résultat peut être d'autres bits de mode définis. + |  | 
| *`optional`* __booléen__ | le champ optionnel spécifie si le Secret ou ses clés doivent être définis + |  | 
| *`mountPath`* __chaîne__ | MountPath est le chemin dans les pods du serveur et de l'agent où le +
contenu du secret sera monté. + |  | 
| *`subPath`* __chaîne__ | SubPath est un chemin optionnel dans le secret à monter au lieu de la racine. +
Lorsque spécifié, seule la clé spécifiée du secret sera montée en tant que fichier +
à MountPath, en gardant le répertoire parent modifiable. + |  | 
| *`role`* __chaîne__ | Le rôle est le type du pod k3k qui sera utilisé pour monter le secret. +
Cela peut être 'serveur', 'agent' ou 'tous' (pour les deux). + |  | Enum{nbsp}: [serveur agent tous] +

|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig"]
=== SecretSyncConfig



SecretSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | true | 
| *`selector`* __objet (clés:string, valeurs:string)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig"]
=== ServiceSyncConfig



ServiceSyncConfig spécifie les options de synchronisation pour les services.



_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`enabled`* __booléen__ | Enabled est un interrupteur marche/arrêt pour la synchronisation des ressources. + | true | 
| *`selector`* __objet (clés:string, valeurs:string)__ | Selector spécifie un ensemble d'étiquettes des ressources qui seront synchronisées, si vide +
alors toutes les ressources du type donné seront synchronisées. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig"]
=== SyncConfig



SyncConfig contiendra les ressources qui doivent être synchronisées du cluster virtuel au cluster hôte.



_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`services`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig[$$ServiceSyncConfig$$]__ | Configuration de synchronisation des ressources de services. + | { enabled:true } | 
| *`configMaps`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig[$$ConfigMapSyncConfig$$]__ | Configuration de synchronisation des ressources de ConfigMaps. + | { enabled:true } | 
| *`secrets`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig[$$SecretSyncConfig$$]__ | Configuration de synchronisation des ressources de secrets. + | { enabled:true } | 
| *`ingresses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig[$$IngressSyncConfig$$]__ | Configuration de synchronisation des ressources d'Ingresses. + | { enabled:false } | 
| *`persistentVolumeClaims`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig[$$PersistentVolumeClaimSyncConfig$$]__ | Configuration de synchronisation des ressources de PersistentVolumeClaims. + | { enabled:true } | 
| *`priorityClasses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig[$$PriorityClassSyncConfig$$]__ | Configuration de synchronisation des ressources de PriorityClasses. + | { enabled:false } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy"]
=== VirtualClusterPolicy



VirtualClusterPolicy permet de définir des configurations et des contraintes communes pour les clusters au sein d'une clusterpolicy.



_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`apiVersion`* __chaîne__ | `k3k.io/v1beta1` | |
| *`kind`* __chaîne__ | `VirtualClusterPolicy` | |
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__ | Consultez la documentation de l'API Kubernetes pour les champs de `metadata`.
 |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]__ | Spec définit l'état souhaité de la VirtualClusterPolicy. + | {  } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist"]
=== VirtualClusterPolicyList



VirtualClusterPolicyList est une liste de ressources VirtualClusterPolicy.





[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`apiVersion`* __chaîne__ | `k3k.io/v1beta1` | |
| *`kind`* __chaîne__ | `VirtualClusterPolicyList` | |
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__ | Consultez la documentation de l'API Kubernetes pour les champs de `metadata`.
 |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$] array__ |  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec"]
=== VirtualClusterPolicySpec



VirtualClusterPolicySpec définit l'état souhaité d'une VirtualClusterPolicy.



_Apparaît dans :_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| Champ | Description | Par défaut | Validation
| *`quota`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcequotaspec-v1-core[$$ResourceQuotaSpec$$]__ | Quota spécifie les limites de ressources pour les clusters au sein d'une clusterpolicy. + |  | 
| *`limit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#limitrangespec-v1-core[$$LimitRangeSpec$$]__ | Limit spécifie le LimitRange qui sera appliqué à tous les pods au sein de la VirtualClusterPolicy +
pour définir des valeurs par défaut et des contraintes (min/max) + |  | 
| *`defaultNodeSelector`* __objet (clés:string, valeurs:string)__ | DefaultNodeSelector spécifie le sélecteur de nœuds qui s'applique à tous les clusters (serveur + agent) dans l'espace de noms cible. + |  | 
| *`defaultPriorityClass`* __chaîne__ | DefaultPriorityClass spécifie le priorityClassName appliqué à tous les pods de tous les clusters dans l'espace de noms cible. + |  | 
| *`allowedMode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__ | AllowedMode spécifie le mode de provisionnement de cluster autorisé. Par défaut, "shared". + | shared | Enum{nbsp}: [partagé virtuel] +

| *`disableNetworkPolicy`* __booléen__ | DisableNetworkPolicy indique s'il faut désactiver la création d'une stratégie réseau par défaut pour l'isolation des clusters. + |  | 
| *`podSecurityAdmissionLevel`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel[$$PodSecurityAdmissionLevel$$]__ | PodSecurityAdmissionLevel spécifie le niveau d'admission de sécurité des pods appliqué aux pods dans l'espace de noms. + |  | Enum{nbsp}: [privilégié de base restreint] +

| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__ | Sync spécifie les types de ressources qui seront synchronisés du cluster virtuel vers le cluster hôte. + | {  } | 
|===




